--- a/public/assets/css/game.css
+++ b/public/assets/css/game.css
@@ -1,6 +1,6 @@
 body {
     height: 100%;
-    background-image: url("../gfx/background.jpg");
+    background-image: url("/assets/gfx/background.jpg");
     background-repeat: no-repeat;
     background-color: #000000;
     color: #ffffff;
